edited the report of results

--- a/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
+++ b/Documents/Report/ChromatinArchitecturePostUVCDamage.tex
@@ -616,12 +616,15 @@ with $\alpha = \alpha_1/\alpha_2$ as in the previous subsection, $\beta$ is end 
    \end{equation*}
  The quantity $\beta /l$ is the global compaction term after expansion. In Figure \ref{fig:radiiVsLengthOfChromainInROI} we present the radius $L$ for pushing as a function of the value of $l$ 
  
- 
+ The ratio between the chromatin length and the ROI radius is then 
+ \begin{equation*}
+ \frac{l}{\beta} =\frac{L\pi(d-h)}{(d-1)(\beta-L)} 
+ \end{equation*}
 \begin{figure}[H]
 
 \includegraphics[width=0.5\linewidth, height=0.3\textheight]{Images/SlidingModel/radiusOfPushingVsLengthOfChromainInROI}
 \includegraphics[width=0.5\linewidth, height=0.3\textheight]{Images/SlidingModel/radiusOfSlidingVsLengthOfChromatinInROI}
-\caption{\tiny{The expansion radius attributed to pushing with no sliding (left) of chromatin as a functio of the length of chromatin in the region, and it's complament, the radius of expansion attributed to pushing + sliding (right) as a function of the length of chromatin in the ROI. The ROI expansion is set to $\sqrt{3}$ and values of the chromatin length rang from $\sqrt{3}$ to $7\sqrt{3}$}}
+\caption{\tiny{The expansion radius attributed to pushing with no sliding (left) of chromatin as a function of the length of chromatin in the region, and it's complament, the radius of expansion attributed to pushing + sliding (right) as a function of the length of chromatin in the ROI. The ROI expansion is set to $\sqrt{3}$ and values of the chromatin length rang from $\sqrt{3}$ to $7\sqrt{3}$, with 20\% DNa loss and 40\% histone loss}}
 \label{fig:radiiVsLengthOfChromainInROI}
 \end{figure}
 
